# agentic-search-ui

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  LOCAL_SETUP.md  NEXT_STEPS.md  README.md  REVIEW-after-plan-thoughts.md  TOMORROW.md  env.example  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: action-planner.md  docs-sync.md  first-principles.md  git-sync.md  objective-review.md  socratic.md
.claude/hooks/: block-bash-delete.sh  block-sensitive-read.sh  scan-context-injection.sh  scan-secrets.sh  scan-write-secrets.sh  session-start.sh
.claude/rules/: ai-security-standards.md  anti-rationalization.md  attack-the-constraint.md  boil-the-lake.md  bossman-mode.md  clarify-before-drafting.md  communication-style.md  decision-logging.md  dependency-tracking.md  file-naming.md  file-protection.md  git-workflow.md  goal-contracts.md  npm-security-check.md  parallel-first.md  pause-before-acting.md  preserve-your-thinking.md  production-examples.md  production-standards.md  sandbox-diagnosis.md  self-eval-loop.md  supply-chain-security.md  system-design-patterns.md  writing-style.md
.codex/: settings.json  settings.local.json
.codex/agents/: action-planner.md  docs-sync.md  first-principles.md  git-sync.md  objective-review.md  socratic.md
.codex/hooks/: session-start.sh
.codex/rules/: bossman-mode.md  communication-style.md  decision-logging.md  dependency-tracking.md  file-protection.md  npm-security-check.md  parallel-first.md  pause-before-acting.md  preserve-your-thinking.md  writing-style.md
.github/: pull_request_template.md
docs/: Agent_teams_tmux_quickstart.md  Agentic_search_architecture_QA.md  Biolink_repos_explained.md  Claude_security_plugin_usage.md  Decision_log_agentic_search.md  Innovation_proposal_2026.md  KG_prototype_feedback.md  Knowledge_graph_on_server_reference.md  NCBI_databases_and_APIs_reference.md  NCBI_repos_deep_dive.md  Personal_build_plan.md  System_1_data_engineering_plan.md  System_3_architecture_brainstorming.md  bossman_execution_plan.md  data_inventory.md  learnings.md  thoughts.md
docs/architecture/: AGE_loader_explained.md  Biolink_repos_explained.md  Data_mapping_and_ontology_explained.md  Merge_logic_explained.md  Technical_reference_data_engineering.md  Three_layer_data_architecture.md
docs/context/: Innovation_proposal_2026.md  Vision_of_success.md
docs/data-engineering/: Knowledge_graph_on_server_reference.md  Project_overview_A_to_Z.md
docs/planning/: Two_track_plan.md
docs/visualizations/: Architecture_diagram.md  Schema_visualization.md
mappings/: clinvar_mondo.sssom.tsv  gene_go.sssom.tsv  gene_hgnc.sssom.tsv
reference/: agentic-search-data-engineering  ncbi_ai_agents-ncbi-kg  personal-os-work
requirements/: Evaluation_playbook.md  PRD.md  Plan.md
requirements/context/: Background_requirements.md  ncbi_ai_models_control_first_summary.md
requirements/meetings/: 2026-05-06_Kick-off.md  2026-05-07_Phase_1_steps_1.1-1.5.md  2026-07-21_Phase_1_step_1.6.md  2026-07-21_Phase_1_steps_1.6-1.13.md  2026-07-22_Phase_2_steps_2.1-2.3.md  2026-07-22_Phase_2_steps_2.1-2.5.md  2026-07-22_Phase_3.md
requirements/phase_1/: Continuation_prompt.md  Phase_1_synthesis.md  Session_July_21.md  Session_May_07.md
requirements/phase_2/: Continuation_prompt.md  Session_July_22.md
requirements/phase_3/: Continuation_prompt.md  Session_July_22.md
schema/: biolink_ncbi.yaml
scripts/: rsync-retry.sh
src/system_03_search_agent/: __init__.py
system-01-data-pipelines/: __init__.py
system-01-data-pipelines/clinvar/: __init__.py  cli.py  download.py  parse_var_citations.py  parse_variant_summary.py  pipeline.py
system-01-data-pipelines/gene/: __init__.py  cli.py  download.py  parse_gene2go.py  parse_gene2pubmed.py  parse_gene_info.py  parse_mim2gene.py  parse_orthologs.py  parse_refseq_uniprot.py  pipeline.py
system-01-data-pipelines/medgen/: __init__.py  cli.py  download.py  parse_hpo_omim.py  parse_id_mappings.py  parse_mgrel.py  (+3 more)
system-02-knowledge-graph/: __init__.py
tests/: conftest.py  test_schema.py
(+99 files in other folders)
