[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-search-data-engineering"
version = "0.1.0"
description = "NCBI ETL pipelines (System 1) and BioLink knowledge graph (System 2)"
requires-python = ">=3.11"
# Dependencies managed in requirements.txt. Install with: pip install -r requirements.txt

[project.scripts]
gene-etl = "system_01_data_pipelines.gene.cli:main"
clinvar-etl = "system_01_data_pipelines.clinvar.cli:main"
medgen-etl = "system_01_data_pipelines.medgen.cli:main"
pubmed-etl = "system_01_data_pipelines.pubmed.cli:main"
taxonomy-etl = "system_01_data_pipelines.taxonomy.cli:main"
merge-etl = "system_01_data_pipelines.merge.cli:main"
age-load = "system_02_knowledge_graph.loader.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit the network or require postgres",
    "docker: tests that require Docker Desktop running with apache/age:latest",
]

[tool.setuptools]
packages = [
    "system_01_data_pipelines",
    "system_01_data_pipelines.shared",
    "system_01_data_pipelines.gene",
    "system_01_data_pipelines.clinvar",
    "system_01_data_pipelines.medgen",
    "system_01_data_pipelines.pubmed",
    "system_01_data_pipelines.taxonomy",
    "system_01_data_pipelines.merge",
    "system_02_knowledge_graph",
    "system_02_knowledge_graph.schema",
    "system_02_knowledge_graph.loader",
    "system_02_knowledge_graph.merge",
]

[tool.setuptools.package-dir]
system_01_data_pipelines = "system-01-data-pipelines"
system_02_knowledge_graph = "system-02-knowledge-graph"
