[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-search-ui"
version = "0.1.0"
description = "System 3: Agentic search agent with FastAPI backend, LangGraph orchestration, and React UI for querying the NCBI knowledge graph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "anthropic>=0.34",
    "litellm>=1.40",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
search-agent = "system_03_search_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit the network or require external services",
]

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = [
    "system_03_search_agent",
    "system_03_search_agent.api",
    "system_03_search_agent.agent",
    "system_03_search_agent.tools",
    "system_03_search_agent.models",
    "system_03_search_agent.auth",
    "system_03_search_agent.config",
]
